--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <title>Liz's HTML Lab</title>
-    
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     
